[package]
name = "server-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
public-ip = "0.2.2"
config = "0.13.3"
lazy_static = "1.4.0"
serde = { version = "1.0.164", features = ["derive"]}
